# ghostty-blackhole-rework

./: .gitignore  CMakeLists.txt  README.md  blackhole_debug.txt  blackhole_presets.txt  build_blackhole.ps1  build_shader.ps1  debug_state.md
.github/workflows/: build.yml
Doc/: TECHNICAL.md
release/: blackhole_debug.txt  blackhole_presets.txt  blackhole_system.txt
release/shaders/: frag_desktop_header.glsl
shaders/: frag_desktop_header.glsl  vert.glsl
src/: capture_dxgi.cpp  capture_wgc.cpp  d3d11_renderer.cpp  d3d11_renderer.h  gl_interop.cpp  gl_interop.h  gui_config.cpp  gui_config.h  main.cpp  renderer_interface.h  screen_capture.cpp  screen_capture.h  texture_source.h  win32_gl.cpp  win32_gl.h  win32_window.cpp  win32_window.h
